# AppsecSeq

./: README.md
angstrom-main/: .gitignore  .gitmodules  Cargo.toml  README.md  clippy.toml  rust-toolchain.toml
angstrom-main/.github/workflows/: build.yaml  docker.yaml
angstrom-main/contracts/: README.md  foundry.toml  out.txt
angstrom-main/contracts/script/: Angstrom.s.sol  BaseScript.sol  comp-gas.py
angstrom-main/contracts/src/: Angstrom.sol
angstrom-main/contracts/src/interfaces/: IAngstromAuth.sol  IAngstromComposable.sol  IDaiPermit.sol  IERC2612.sol  IHooks.sol  IUniV4.sol
angstrom-main/contracts/src/libraries/: MixedSignLib.sol  PoolConfigStore.sol  RayMathLib.sol  SignatureLib.sol  TickLib.sol  X128MathLib.sol
angstrom-main/contracts/src/modules/: GrowthOutsideUpdater.sol  OrderInvalidation.sol  PermitSubmitterHook.sol  PoolUpdates.sol  Settlement.sol  TopLevelAuth.sol  UniConsumer.sol  UnlockHook.sol
angstrom-main/contracts/src/periphery/: AngstromView.sol  ControllerV1.sol
angstrom-main/contracts/src/types/: Asset.sol  CalldataReader.sol  ConfigBuffer.sol  ConfigEntry.sol  DeltaTracker.sol  HookBuffer.sol  Pair.sol  PoolRewards.sol  PoolUpdateVariantMap.sol  Positions.sol  Price.sol  StoreKey.sol  SwapCall.sol  ToBOrderBuffer.sol  ToBOrderVariantMap.sol  TypedDataHasher.sol  UserOrderBuffer.sol  UserOrderVariantMap.sol
angstrom-main/contracts/test/: Angstrom.t.sol
angstrom-main/contracts/test/_helpers/: BaseTest.sol  Debugging.sol  DeltaClearerERC20.sol  HookAddressChecker.sol  HookDeployer.sol  IERC1271.sol  PoolGate.sol  PositionFetcher.sol  RewardLib.sol  TickRangeMap.sol  Utils.sol
angstrom-main/contracts/test/_helpers/tests/: BaseTest.t.sol  RewardLib.t.sol
angstrom-main/contracts/test/_helpers/types/: Trader.sol
angstrom-main/contracts/test/_mocks/: InvasiveV4.sol  MintableMockERC20.sol  MockRewardsManager.sol  NonStandardERC20s.sol  OpenAngstrom.sol  RouterActor.sol
angstrom-main/contracts/test/_mocks/composable/: Recorder.sol  SmolReturn.sol
angstrom-main/contracts/test/_mocks/erc1271/: IERC1271.sol  ReturnerERC1271.sol  RevertingERC1271.sol  TwoSigERC1271.sol
angstrom-main/contracts/test/_reference/: Asset.sol  BitPackLib.sol  Bundle.sol  OrderTypes.sol  OrderVariant.sol  Pair.sol  PoolUpdate.sol  SignedTypes.sol  UserOrder.sol
angstrom-main/contracts/test/_view-ext/: UniV4Inspector.sol
angstrom-main/contracts/test/benchmark/: FullBundle.b.sol  PoolRewards.b.sol  UserOrder.b.sol
angstrom-main/contracts/test/benchmark/_helpers/: PairIterator.sol
angstrom-main/contracts/test/invariants/: AngstromHandler.sol  AngstromInvariants.t.sol
angstrom-main/contracts/test/invariants/pool-rewards/: PoolRewardsHandler.sol
angstrom-main/contracts/test/libraries/: MixedSignLib.t.sol  PoolManagerStateGetter.t.sol  Positions.t.sol  RayMathLib.t.sol  SignatureLib.t.sol  TickLib.t.sol  X128MathLib.t.sol
angstrom-main/contracts/test/modules/: OrderInvalidation.t.sol  PoolUpdates.t.sol  Settlement.t.sol  TopLevelAuth.t.sol  UnlockHook.t.sol
angstrom-main/contracts/test/periphery/: ControllerV1.t.sol
angstrom-main/contracts/test/types/: Asset.t.sol  CalldataReader.t.sol  ConfigBuffer.t.sol  HookBuffer.t.sol  ToBOrderBuffer.t.sol  UserOrderBuffer.t.sol  UserOrderVariantMap.t.sol
angstrom-main/crates/angstrom-net/: Cargo.toml
angstrom-main/crates/angstrom-net/src/: builder.rs  eth_network_builder.rs  manager.rs  pool_manager.rs  swarm.rs
angstrom-main/crates/angstrom-net/src/session/: config.rs  connection_handler.rs  mod.rs  protocol_handler.rs
angstrom-main/crates/angstrom-net/src/types/: status.rs
angstrom-main/crates/consensus/: Cargo.toml
angstrom-main/crates/consensus/src/: leader_selection.rs  lib.rs  manager.rs
angstrom-main/crates/consensus/src/rounds/: bid_aggregation.rs  finalization.rs  mod.rs  pre_proposal.rs  pre_proposal_aggregation.rs  preproposal_wait_trigger.rs  proposal.rs
angstrom-main/crates/eth/: Cargo.toml
angstrom-main/crates/eth/src/: lib.rs  manager.rs
angstrom-main/crates/matching-engine/: Cargo.toml
angstrom-main/crates/matching-engine/benches/: delta_tps.rs
angstrom-main/crates/matching-engine/src/: lib.rs  manager.rs
angstrom-main/crates/matching-engine/tests/: bundle.rs  matching.rs
angstrom-main/crates/metrics/: Cargo.toml
angstrom-main/crates/metrics/src/: consensus.rs  exporter.rs  lib.rs  validation.rs
angstrom-main/crates/order-pool/: Cargo.toml
angstrom-main/crates/order-pool/src/: config.rs  finalization_pool.rs  lib.rs  order_indexer.rs  order_storage.rs  order_subscribers.rs  order_tracker.rs  validator.rs
angstrom-main/crates/rpc/: Cargo.toml
angstrom-main/crates/rpc/src/: lib.rs
angstrom-main/crates/types/: Cargo.toml  build.rs
angstrom-main/crates/types/src/: block_sync.rs  lib.rs  pair_with_price.rs  reth_db_provider.rs  reth_db_wrapper.rs
angstrom-main/crates/types/tests/: angstrom.rs  math.rs
angstrom-main/crates/uniswap-v4/: Cargo.toml  build.rs
angstrom-main/crates/uniswap-v4/src/: lib.rs
angstrom-main/crates/utils/: Cargo.toml
angstrom-main/crates/validation/: Cargo.toml
angstrom-main/crates/validation/src/: lib.rs  validator.rs
angstrom-main/etc/: angstrom-sepolia.service
angstrom-main/examples/: node_config.toml
angstrom-main/testing-tools/: Cargo.toml
angstrom-main/testing-tools/src/: lib.rs  utils.rs
angstrom-main/testing-tools/src/contracts/: anvil.rs
angstrom-main/testing-tools/src/controllers/: state_lock.rs
angstrom-main/testing-tools/src/mocks/: canon_state.rs  consensus.rs  matching_engine.rs  validator.rs
angstrom-main/testing-tools/src/network/: mod.rs
angstrom-main/testing-tools/src/order_generator/: mod.rs  order_builder.rs  pool_order_generator.rs
angstrom-main/testing-tools/src/providers/: anvil_provider.rs  anvil_submission.rs  initializer.rs  rpc_provider.rs  state_provider.rs
angstrom-main/testing-tools/src/type_generator/: amm.rs  book.rs
angstrom-main/testing-tools/src/types/: handles.rs  initial_state.rs  traits.rs
angstrom-main/testing-tools/src/validation/: mod.rs
(+137 files in other folders)
