[workspace]
members = ["bin/*", "crates/*", "testing-tools"]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.86.0"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/SorellaLabs/angstrom"
repository = "https://github.com/SorellaLabs/angstrom"
exclude = [".github/"]


# Speed up tests.
[profile.dev.package]
angstrom-network.opt-level = 3
consensus.opt-level = 3
matching-engine.opt-level = 3
validation.opt-level = 3
testing-tools.opt-level = 3
angstrom-types.opt-level = 3
tokio.opt-level = 3

[profile.debug-fast]
inherits = "dev"
lto = false
opt-level = 3
codegen-units = 15

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 15


[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1
incremental = false


[workspace.dependencies]
consensus = { path = "./crates/consensus/" }
angstrom-types = { path = "./crates/types/" }
uniswap-v4 = { path = "./crates/uniswap-v4/" }
angstrom-utils = { path = "./crates/utils/" }
validation = { path = "./crates/validation/" }
order-pool = { path = "./crates/order-pool/" }
angstrom-eth = { path = "./crates/eth/" }
angstrom-rpc = { path = "./crates/rpc/" }
angstrom-network = { path = "./crates/angstrom-net/" }
angstrom-metrics = { path = "./crates/metrics/" }
testing-tools = { path = "./testing-tools/", default-features = false }
angstrom = { path = "./bin/angstrom/" }
matching-engine = { path = "./crates/matching-engine/" }
contract-bindings = { path = "./crates/contract-bindings/" }
eyre = "0"
dashmap = "6"
malachite = "0.4"
malachite-q = "0.4"
once_cell = "1"

# pade
pade = { git = "https://github.com/SorellaLabs/pade", version = "0.1.0" }
pade-macro = { git = "https://github.com/SorellaLabs/pade", version = "0.1.0" }

## async
async-trait = "0"
futures = "0"
pin-project = "1"
futures-util = "0"

## bitmaps
bitmaps = "3"

# revm
revm = { version = "22.0.1", features = [
  "std",
  "secp256k1",
  "optional_balance_check",
  "optional_block_gas_limit",
], default-features = false }
revm-bytecode = { version = "3.0.0", default-features = false }
revm-database = { version = "3.0.0", default-features = false }
revm-state = { version = "3.0.0", default-features = false }
revm-primitives = { version = "18.0.0", default-features = false }
revm-interpreter = { version = "18.0.0", default-features = false }


# reth
reth = { git = "https://github.com/paradigmxyz/reth", version = "1.3.12", tag = "v1.3.12" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", version = "1.3.12", tag = "v1.3.12", default-features = false }
reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth", version = "1.3.12", tag = "v1.3.12" }
reth-ethereum-primitives = { git = "https://github.com/paradigmxyz/reth", version = "1.3.12", tag = "v1.3.12" }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", version = "1.3.12", tag = "v1.3.12" }
reth-trie = { git = "https://github.com/paradigmxyz/reth", version = "1.3.12", tag = "v1.3.12" }
reth-storage-api = { git = "https://github.com/paradigmxyz/reth", version = "1.3.12", tag = "v1.3.12" }
reth-provider = { git = "https://github.com/paradigmxyz/reth", version = "1.3.12", tag = "v1.3.12" }
reth-db = { git = "https://github.com/paradigmxyz/reth", version = "1.3.12", tag = "v1.3.12" }
reth-discv4 = { git = "https://github.com/paradigmxyz/reth", version = "1.3.12", tag = "v1.3.12" }
reth-errors = { git = "https://github.com/paradigmxyz/reth", version = "1.3.12", tag = "v1.3.12" }
reth-cli-util = { git = "https://github.com/paradigmxyz/reth", version = "1.3.12", tag = "v1.3.12" }
reth-network-peers = { git = "https://github.com/paradigmxyz/reth", version = "1.3.12", tag = "v1.3.12" }
reth-node-builder = { git = "https://github.com/paradigmxyz/reth", version = "1.3.12", tag = "v1.3.12" }
reth-node-types = { git = "https://github.com/paradigmxyz/reth", version = "1.3.12", tag = "v1.3.12" }
reth-codecs = { git = "https://github.com/paradigmxyz/reth", version = "1.3.12", tag = "v1.3.12" }
reth-ecies = { git = "https://github.com/paradigmxyz/reth", version = "1.3.12", tag = "v1.3.12" }
reth-rpc-builder = { git = "https://github.com/paradigmxyz/reth", version = "1.3.12", tag = "v1.3.12" }
reth-rpc-types-compat = { git = "https://github.com/paradigmxyz/reth", version = "1.3.12", tag = "v1.3.12" }
reth-metrics = { git = "https://github.com/paradigmxyz/reth", version = "1.3.12", tag = "v1.3.12" }
reth-revm = { git = "https://github.com/paradigmxyz/reth", version = "1.3.12", tag = "v1.3.12" }
reth-payload-builder = { git = "https://github.com/paradigmxyz/reth", version = "1.3.12", tag = "v1.3.12" }
reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", version = "1.3.12", tag = "v1.3.12" }
reth-tasks = { git = "https://github.com/paradigmxyz/reth", version = "1.3.12", tag = "v1.3.12" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth", version = "1.3.12", tag = "v1.3.12" }
reth-network = { git = "https://github.com/paradigmxyz/reth", version = "1.3.12", tag = "v1.3.12" }
reth-network-api = { git = "https://github.com/paradigmxyz/reth", version = "1.3.12", tag = "v1.3.12" }
reth-libmdbx = { git = "https://github.com/paradigmxyz/reth", version = "1.3.12", tag = "v1.3.12" }
reth-eth-wire = { git = "https://github.com/paradigmxyz/reth", version = "1.3.12", tag = "v1.3.12" }
reth-tokio-util = { git = "https://github.com/paradigmxyz/reth", version = "1.3.12", tag = "v1.3.12" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth", version = "1.3.12", tag = "v1.3.12" }

# alloy
alloy = { version = "0.14.0", features = [
  "rlp",
  "full",
  #  "eip712",
  "node-bindings",
  "rpc-types-debug",
  "rpc-types-trace",
  "json-rpc",
  "rpc-client",
  "signer-keystore",
  "signer-ledger",
  "signer-mnemonic",
  "signer-trezor",
  "signer-yubihsm",
  "sol-types",
  "contract",
] }
alloy-chains = { version = "0.2.0", default-features = false }
alloy-primitives = { version = "1.0.0", default-features = false, features = [
  "map-foldhash",
] }
alloy-sol-macro = "0.14.0"
alloy-dyn-abi = "0.14.0"
alloy-sol-types = "1.0.0"
alloy-rlp = "0.3.10"
alloy-rlp-derive = "0.3.10"
alloy-trie = { version = "0.8.1", default-features = false }
alloy-rpc-types = { version = "0.14.0", default-features = false, features = [
  "eth",
] }
alloy-rpc-types-anvil = { version = "0.14.0", default-features = false }
alloy-rpc-types-beacon = { version = "0.14.0", default-features = false }
alloy-rpc-types-admin = { version = "0.14.0", default-features = false }
alloy-rpc-types-txpool = { version = "0.14.0", default-features = false }
alloy-serde = { version = "0.14.0", default-features = false }
alloy-rpc-types-engine = { version = "0.14.0", default-features = false }
alloy-rpc-types-eth = { version = "0.14.0", default-features = false }
alloy-genesis = { version = "0.14.0", default-features = false }
alloy-node-bindings = { version = "0.14.0", default-features = false }
alloy-provider = { version = "0.14.0", default-features = false, features = [
  "reqwest",
] }
alloy-eips = { version = "0.14.0", default-features = false }
alloy-signer = { version = "0.14.0", default-features = false }
alloy-signer-local = { version = "0.14.0", default-features = false }
alloy-network = { version = "0.14.0", default-features = false }
alloy-consensus = { version = "0.14.0", default-features = false }
alloy-transport = { version = "0.14.0" }
alloy-transport-http = { version = "0.14.0", features = [
  "reqwest-rustls-tls",
], default-features = false }
alloy-transport-ws = { version = "0.14.0", default-features = false }
alloy-transport-ipc = { version = "0.14.0", default-features = false }
alloy-pubsub = { version = "0.14.0", default-features = false }
alloy-json-rpc = { version = "0.14.0", default-features = false }
alloy-rpc-client = { version = "0.14.0", default-features = false }


# Uniswap math helpers
uniswap_v3_math = { git = "https://github.com/SorellaLabs/v3-math", branch = "main" }

hex-literal = "0"

## misc
bytes = "1"
bincode = "1"
bitflags = "2"
tracing = "0"
tracing-appender = "0"
tracing-subscriber = "0"
thiserror = "1"
serde_json = "1"
serde = { version = "1", default-features = false, features = ["derive"] }
rand = "0.9.0"
rand_distr = "0.5.1"
num-traits = "0"
num-bigfloat = "1"
strum = "0"
rayon = "1"
itertools = "0"
parking_lot = "0"
metrics = "0.21.1"
anyhow = "1"
url = "2"
auto_impl = "1"
toml = "0"
k256 = { version = "0", default-features = false }
clap = "4"
homedir = "0"

### proc-macros
proc-macro2 = "1"
quote = "1"

## tokio
tokio-stream = "0"
tokio = { version = "^1.44.2", features = [
  "full",
  "tracing",
], default-features = false }
tokio-util = { version = "0", features = ["codec"] }


## json
jsonrpsee = "0.24.9"
jsonrpsee-core = "0.24.9"
jsonrpsee-http-client = "0.24.9"
jsonrpsee-types = "0.24.9"

## crypto
secp256k1 = { version = "0.30", default-features = false, features = [
  "global-context",
  "rand",
  "recovery",
] }

enr = { version = "0", default-features = false, features = ["k256"] }


aquamarine = "0"

# misc-testing
arbitrary = "1"
assert_matches = "1"
tempfile = "3"
criterion = "0"
pprof = "0"
proptest = "1"
proptest-derive = "0"
serial_test = "3"
base64 = "0"
base64-serde = "*"
convert_case = "0"
divan = "0"

ring = "=0.17.12"
