[package]
name = "angstrom-network"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = """
Ethereum network support
"""

[package.metadata.cargo-udeps.ignore]
normal = [
  # Used for diagrams in docs
  "aquamarine",
]

[lints.clippy]
large_enum_variant = "allow"
too_long_first_doc_paragraph = "allow"

[dependencies]
# reth
reth-errors.workspace = true
reth-primitives.workspace = true
reth-network-api.workspace = true
reth-codecs.workspace = true
reth-tasks.workspace = true
reth-transaction-pool.workspace = true
reth-provider.workspace = true
reth-eth-wire.workspace = true
reth-network.workspace = true
reth-ecies.workspace = true
reth-network-peers.workspace = true
reth-node-builder.workspace = true
reth.workspace = true

reth-network-p2p = { git = "https://github.com/paradigmxyz/reth", version = "1.3.12", tag = "v1.3.12" }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", version = "1.3.12", tag = "v1.3.12" }
reth-net-banlist = { git = "https://github.com/paradigmxyz/reth", version = "1.3.12", tag = "v1.3.12" }
reth-tokio-util = { git = "https://github.com/paradigmxyz/reth", version = "1.3.12", tag = "v1.3.12" }
reth-discv4.workspace = true
reth-dns-discovery = { git = "https://github.com/paradigmxyz/reth", version = "1.3.12", tag = "v1.3.12" }

alloy.workspace = true
alloy-chains.workspace = true
alloy-rpc-types = { workspace = true, features = ["eth"] }

anyhow.workspace = true
bincode.workspace = true

angstrom-eth.workspace = true
angstrom-types.workspace = true
angstrom-utils.workspace = true
order-pool.workspace = true
validation.workspace = true

# async/futures
futures.workspace = true
pin-project.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true

# io
serde.workspace = true
humantime-serde = { version = "1", optional = true }
serde_json = { workspace = true, optional = true }

# metrics
reth-metrics.workspace = true
metrics.workspace = true

# misc
auto_impl = "1"
aquamarine.workspace = true
tracing.workspace = true
thiserror.workspace = true
parking_lot.workspace = true
async-trait.workspace = true
linked_hash_set = "0"
linked-hash-map = "0"
rand.workspace = true
secp256k1.workspace = true
eyre.workspace = true

enr = { workspace = true, features = ["rust-secp256k1"], optional = true }
tempfile = { workspace = true, optional = true }
k256.workspace = true
homedir.workspace = true
once_cell.workspace = true
toml.workspace = true
itertools.workspace = true

[dev-dependencies]
testing-tools.workspace = true
angstrom-network.workspace = true
# reth
reth-discv4 = { workspace = true, features = ["test-utils"] }
reth-primitives = { workspace = true, features = ["test-utils"] }

reth-network = { workspace = true, features = ["test-utils"] }
reth-metrics.workspace = true

reth-provider = { workspace = true, features = ["test-utils"] }
reth-tracing.workspace = true
reth-transaction-pool = { workspace = true, features = ["test-utils"] }

rand.workspace = true
secp256k1.workspace = true

# misc
serial_test.workspace = true
tempfile.workspace = true
toml.workspace = true

[features]
default = ["serde"]
serde = [
  "dep:humantime-serde",
  "secp256k1/serde",
  "enr?/serde",
  "dep:serde_json",
]
test-utils = ["reth-provider/test-utils", "dep:enr", "dep:tempfile"]
geth-tests = []
testnet = ["default", "angstrom-types/testnet"]
