[package]
name = "angstrom-eth"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true


[dependencies]
angstrom-types.workspace = true
angstrom-utils.workspace = true
pade.workspace = true
itertools.workspace = true

reth-primitives.workspace = true
reth-ethereum-primitives.workspace = true
reth-primitives-traits.workspace = true
tokio.workspace = true
futures.workspace = true
tokio-stream.workspace = true
futures-util.workspace = true

# reth
reth-provider.workspace = true
reth-tasks.workspace = true

# alloy  
alloy.workspace = true

# misc
anyhow.workspace = true
auto_impl.workspace = true
tracing.workspace = true

[dev-dependencies]
testing-tools.workspace = true
rand.workspace = true


[features]
testnet-sepolia = ["angstrom-types/testnet-sepolia"]
